--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
     </div>
     <main class="wrapper wrapper_main">
         <div class="container">
+            <header class="header">
+                <div class="wrapper__inner">
+                    <img src="images/svg/logo.svg" class="header__logo" alt="">
+                    <div class="header__inner">
+                        <div class="search">
+                            <input type="search" class="search__field hide" placeholder="Введите запрос для поиска">
+                            <img src="images/svg/search.svg" class="search__icon" alt="">
+                        </div>
+                        <div class="user user-js">
+                            <img src="images/svg/user.svg" alt="" class="user__image">
+                            <div class="user__inner hide">
+                                <p class="user__name">Игорь Николаевич</p>
+                                <img src="images/svg/user-icon-on.svg" alt="" class="user__icon">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
             <div class="wrapper__inner tabs">
                 <ul class="tab-header">
                     <li class="tab-header__item js-tab-trigger active" data-tab="1">
@@ -122,66 +140,72 @@
                         Задачи
                     </li>
                 </ul>
-                <ul class="tab-content">
-                    <li class="tab-content__item js-tab-content active" data-tab="1">
-                        Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты.
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="2">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum rem laboriosam cum repudiandae
-                        natus corrupti?
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="3">
-                        Далеко-далеко за словесными горами.
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="4">
-                        4
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="5">
-                        5
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="6">
-                        6
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="7">
-                        7
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="8">
-                        8
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="9">
-                        9
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="10">
-                        10
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="11">
-                        11
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="12">
-                        12
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="13">
-                        13
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="14">
-                        14
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="15">
-                        15
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="16">
-                        16
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="17">
-                        17
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="18">
-                        18
-                    </li>
-                    <li class="tab-content__item js-tab-content" data-tab="19">
-                        19
-                    </li>
-                </ul>
+                <div class="content">
+                    <ul class="tab-content">
+                        <li class="tab-content__item js-tab-content active" data-tab="1">
+                            Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты.
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="2">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum rem laboriosam cum repudiandae
+                            natus corrupti?
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="3">
+                            Далеко-далеко за словесными горами.
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="4">
+                            4
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="5">
+                            5
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="6">
+                            6
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="7">
+                            7
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="8">
+                            8
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="9">
+                            9
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="10">
+                            10
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="11">
+                            11
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="12">
+                            12
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="13">
+                            13
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="14">
+                            14
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="15">
+                            15
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="16">
+                            16
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="17">
+                            17
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="18">
+                            18
+                        </li>
+                        <li class="tab-content__item js-tab-content" data-tab="19">
+                            19
+                        </li>
+                    </ul>
+                    <div class="tab-buttons">
+                        <button class="tab-button tab-button_prev">Назад</button>
+                        <button class="tab-button tab-button_next">Вперед</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
