--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
        </div>  -->
     </div>
     <main class="wrapper wrapper_main">
+        <img src="images/top-left-waves.png" alt="" class="wrapper__bg wrapper__bg_top">
         <div class="container">
             <header class="header">
                 <div class="wrapper__inner">
@@ -150,7 +151,19 @@
                             natus corrupti?
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="3">
-                            Далеко-далеко за словесными горами.
+                            <h2 class="tab-content__title">Форм-факторы</h2>
+                            <p class="tab-content__text">Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так. Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney, штат Вирджиния, взял одно из самых странных слов в Lorem Ipsum, "consectetur", и занялся его поисками в классической латинской литературе. В результате он нашёл неоспоримый первоисточник Lorem Ipsum в разделах 1.10.32 и 1.10.33 книги "de Finibus Bonorum et Malorum" ("О пределах добра и зла"), написанной Цицероном в 45 году н.э. Этот трактат по теории этики был очень популярен в эпоху Возрождения. Первая строка Lorem Ipsum, "Lorem ipsum dolor sit amet..", происходит от одной из строк в разделе 1.10.32 Классический текст Lorem Ipsum, используемый с XVI века, приведён ниже. Также даны разделы 1.10.32 и 1.10.33 "de Finibus Bonorum et Malorum" Цицерона и их английский перевод, сделанный H. Rackham, 1914 год.</p>
+                            <div class="tab-content__images">
+                                <img src="images/article1.jpg" alt="" class="tab-content__image tab-content__image_big">
+                                <div class="tab-content__inner">
+                                    <img src="images/article2.jpg" alt="" class="tab-content__image tab-content__image_little">
+                                    <img src="images/article3.jpg" alt="" class="tab-content__image tab-content__image_little">
+                                </div>
+                            </div>
+                            <h3 class="tab-content__subtitle">Подзаголовок</h3>
+                            <p class="tab-content__text">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.."</p>
+                            <p class="tab-content__text">Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</p>
+                            <p class="tab-content__text">Есть много вариантов Lorem Ipsum, но большинство из них имеет не всегда приемлемые модификации, например, юмористические вставки или слова, которые даже отдалённо не напоминают латынь. Если вам нужен Lorem Ipsum для серьёзного проекта, вы наверняка не хотите какой-нибудь шутки, скрытой в середине абзаца.</p>
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="4">
                             4
@@ -208,6 +221,7 @@
                 </div>
             </div>
         </div>
+        <img src="images/top-center-waves.png" alt="" class="wrapper__bg wrapper__bg_bottom">
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
