add script for next/prev buttons

--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
                         </li>
                     </ul>
                     <div class="tab-buttons">
-                        <button class="tab-button tab-button_prev">Назад</button>
-                        <button class="tab-button tab-button_next">Вперед</button>
+                        <button class="tab-button tab-button_prev js-btn-prev">Назад</button>
+                        <button class="tab-button tab-button_next js-btn-next">Вперед</button>
                     </div>
                 </div>
             </div>
