--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="user user-js">
                             <img src="images/svg/user.svg" alt="" class="user__image">
-                            <div class="user__inner hide">
+                            <div class="user__inner">
                                 <p class="user__name">Игорь Николаевич</p>
                                 <img src="images/svg/user-icon-on.svg" alt="" class="user__icon">
                             </div>
