--- a/index.html
+++ b/index.html
@@ -441,6 +441,15 @@
         <img src="images/top-center-waves.png" alt="" class="wrapper__bg wrapper__bg_bottom">
     </main>
 
+    <div class="popup popup_access">
+        <div class="popup__overlay"></div>
+        <div class="popup__inner">
+            <img src="images/lock.png" class="popup__image" alt="">       
+            <p class="popup__title">Вы ещё не прошли предыдущие темы, чтобы иметь доступ к этой теме</p>
+            <div class="popup__close">Вернуться</div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
