--- a/index.html
+++ b/index.html
@@ -422,7 +422,70 @@
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="18">
                             <div class="article">
-                                <h2 class="article__title">Видео-курсы</h2>
+                                <h2 class="article__title article__title_no-border">Видео-курсы</h2>
+                                <div class="videos">
+                                    <div class="video">
+                                        <div class="video__inner">
+                                            <img src="images/video1.jpg" alt="" class="video__image">
+                                            <div class="video__info">
+                                                <h3 class="video__title">Mama-edu “Аккаунт менеджер”</h3>
+                                                <a href="" class="link">mama-edu.com</a>
+                                                <p class="video__text">Логин: <span class="link">d.udinceva@rocketprofit.com</span></p>
+                                                <p class="video__text">Пароль: 090607callR</p>
+                                            </div>
+                                        </div>
+                                        <button class="video__button">Отправить скрин о просмотре</button>
+                                    </div>
+                                    <div class="video">
+                                        <div class="video__inner">
+                                            <img src="images/video2.jpg" alt="" class="video__image">
+                                            <div class="video__info">
+                                                <h3 class="video__title">Affhub “Арбитраж для новичков”</h3>
+                                                <a href="" class="link">affhub.net/aboutstudy</a>
+                                                <p class="video__text">Зарегаться самостоятельно</p>
+                                            </div>
+                                        </div>
+                                        <button class="video__button">Отправить скрин о просмотре</button>
+                                    </div>
+                                    <div class="video">
+                                        <div class="video__inner">
+                                            <img src="images/video3.jpg" alt="" class="video__image">
+                                            <div class="video__info">
+                                                <h3 class="video__title">Cybermarketing “Курс по СРА”</h3>
+                                                <a href="" class="link">mama-edu.com</a>
+                                                <p class="video__text"><span class="link">cybermarketing.ru/video-courses/prom...</span></p>
+                                                <p class="video__text">Зарегаться самостоятельно</p>
+                                            </div>
+                                        </div>
+                                        <button class="video__button">Отправить скрин о просмотре</button>
+                                    </div>
+                                    <div class="video">
+                                        <div class="video__inner">
+                                            <img src="images/video4.jpg" alt="" class="video__image">
+                                            <div class="video__info">
+                                                <h3 class="video__title">Lucky-center “Арбитраж трафика”</h3>
+                                                <a href="" class="link">mama-edu.com</a>
+                                                <p class="video__text"><span class="link">luckycenter.ekvio.ru/395/lp/1575-kurcy...</span></p>
+                                                <p class="video__text">Логин: <span class="link">2yyegorguu7@list.ru</span></p>
+                                                <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
+                                            </div>
+                                        </div>
+                                        <button class="video__button">Отправить скрин о просмотре</button>
+                                    </div>
+                                    <div class="video">
+                                        <div class="video__inner">
+                                            <img src="images/video4.jpg" alt="" class="video__image">
+                                            <div class="video__info">
+                                                <h3 class="video__title">Lucky-center “Арбитраж трафика”</h3>
+                                                <a href="" class="link">mama-edu.com</a>
+                                                <p class="video__text"><span class="link">luckycenter.ekvio.ru/395/lp/1575-kurcy...</span></p>
+                                                <p class="video__text">Логин: <span class="link">2yyegorguu7@list.ru</span></p>
+                                                <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
+                                            </div> 
+                                        </div>
+                                        <button class="video__button">Отправить скрин о просмотре</button>                                      
+                                    </div>                                    
+                                </div>
                             </div>
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="19">
@@ -443,11 +506,24 @@
 
     <div class="popup popup_access">
         <div class="popup__overlay"></div>
-        <div class="popup__inner">
+        <div class="popup__inner popup__inner_access">
             <img src="images/lock.png" class="popup__image" alt="">       
             <p class="popup__title">Вы ещё не прошли предыдущие темы, чтобы иметь доступ к этой теме</p>
             <div class="popup__close">Вернуться</div>
         </div>
+    </div>
+
+    <div class="popup popup_shot">
+        <div class="popup__overlay"></div>
+        <div class="popup__inner popup__inner_shot">
+            <div class="popup__wrapper">
+                <img src="images/shot.png" class="popup__image popup__image_shot" alt="">       
+                <p class="popup__title popup__title_shot">Вставь скрин о просмотре видео и получении сертификата</p>
+                <p class="popup__subtitle">Вставить можно при помощи Drag’n’Drop в это окно или с помощью кнопки ниже</p>
+                <input type="text" class="popup__button" placeholder="Выбрать скриншот"> 
+            </div>  
+            <div class="popup__close popup__close_shot">Вернуться</div>             
+        </div>        
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
