--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <input type="search" class="search__field hide" placeholder="Введите запрос для поиска">
                             <img src="images/svg/search.svg" class="search__icon" alt="">
                         </div>
-                        <div class="user user-js">
+                        <div class="user js-tab-trigger" data-tab="20">
                             <img src="images/svg/user.svg" alt="" class="user__image">
                             <div class="user__inner">
                                 <p class="user__name">Игорь Николаевич</p>
@@ -65,6 +65,12 @@
             </header>
             <div class="wrapper__inner tabs">
                 <ul class="tab-header">
+                    <li class="cabinet-menu hide">
+                        <div class="cabimet-menu__ava"></div>
+                        <h3 class="cabinet-menu__name">Буренок Игорь Николаевич</h3>
+                        <a href="mailto:i.nikolaevich@rocketprofit.com" class="cabinet-menu__email">i.nikolaevich@rocketprofit.com</a>
+                        <button class="cabinet-menu__button">Выйти из профиля</button>
+                    </li>
                     <li class="tab-header__item js-tab-trigger active" data-tab="1">
                         <svg class="tab-header__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M9 22H15C20 22 22 20 22 15V9C22 4 20 2 15 2H9C4 2 2 4 2 9V15C2 20 4 22 9 22Z"
@@ -490,7 +496,44 @@
                                 <h2 class="article__title">Задачи</h2>
                             </div>
                         </li>
-                    </ul>
+                        <li class="private-cabinet tab-content__item js-tab-content" data-tab="20">
+                            <h2 class="private-cabinet__title">Личный кабинет</h2>
+                            <div class="statistic">
+                                <h3 class="statistic__title">Статистика</h3>
+                                <p class="statistic__subtitle">Изучено тем <span class="statistic__themes">(<span class="themes-count">4</span>)</span></p>
+                                <div class="statistic__inner">
+                                    <div class="stat-block">
+                                        <div class="stat-block__head">
+                                            <p class="stat-block__title">Теория</p>
+                                            <p class="stat-block__percent stat-block__percent_purple">100%</p>
+                                        </div>
+                                        <div class="stat-block__line stat-block__line_hundred"></div>
+                                    </div>
+                                    <div class="stat-block">
+                                        <div class="stat-block__head">
+                                            <p class="stat-block__title">Rocket Profit</p>
+                                            <p class="stat-block__percent stat-block__percent_purple">100%</p>
+                                        </div>
+                                        <div class="stat-block__line stat-block__line_hundred"></div>
+                                    </div>
+                                    <div class="stat-block">
+                                        <div class="stat-block__head">
+                                            <p class="stat-block__title">Видео-курсы</p>
+                                            <p class="stat-block__percent stat-block__percent_blue">30%</p>
+                                        </div>
+                                        <div class="stat-block__line stat-block__line_thirty"></div>
+                                    </div>
+                                    <div class="stat-block">
+                                        <div class="stat-block__head">
+                                            <p class="stat-block__title">Задачи</p>
+                                            <p class="stat-block__percent stat-block__percent_grey">0%</p>
+                                        </div>
+                                        <div class="stat-block__line stat-block__line_zero"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>                    
                     <div class="tab-buttons">
                         <button class="tab-button tab-button_prev js-btn-prev">Назад</button>
                         <button class="tab-button tab-button_next js-btn-next">Вперед</button>
