--- a/index.html
+++ b/index.html
@@ -423,7 +423,101 @@
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="17">
                             <div class="article">
-                                <h2 class="article__title">Тест</h2>
+                                <h2 class="article__title">Заголовок темы</h2>
+                                <button class="quiz-button quiz-button_start">Начать прохождение теста</button>
+                                <div class="article__wrap">
+                                   <div class="article__quiz">
+                                        <h3 class="article__subtitle article__subtitle_quiz">Название теста</h3>
+                                        <div class="quiz-block">
+                                            <h3 class="quiz__title">1. Заголовок вопроса?</h3>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb" id="rb1" value="1">
+                                                <label for="rb1" class="answer__label">Вариант ответа 1</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb" id="rb2" value="2">
+                                                <label for="rb2" class="answer__label">Вариант ответа 2</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb" id="rb3" value="2">
+                                                <label for="rb3" class="answer__label">Вариант ответа 3</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb" id="rb4" value="2">
+                                                <label for="rb4" class="answer__label">Вариант ответа 4</label>
+                                            </div>
+                                        </div>
+                                        <div class="quiz-block">
+                                            <h3 class="quiz__title">2. Заголовок вопроса?</h3>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb2" id="rb5" value="1">
+                                                <label for="rb5" class="answer__label">Вариант ответа 1</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb2" id="rb6"  value="2">
+                                                <label for="rb6" class="answer__label">Вариант ответа 2</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb2" id="rb7" value="2">
+                                                <label for="rb7" class="answer__label">Вариант ответа 3</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb2" id="rb8" value="2">
+                                                <label for="rb8" class="answer__label">Вариант ответа 4</label>
+                                            </div>
+                                        </div>
+                                        <div class="quiz-block">
+                                            <h3 class="quiz__title">3. Заголовок вопроса?</h3>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb3" id="rb9"  value="1">
+                                                <label for="rb9" class="answer__label">Вариант ответа 1</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb3" id="rb10" value="2">
+                                                <label for="rb10" class="answer__label">Вариант ответа 2</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb3" id="rb11" value="2">
+                                                <label for="rb11" class="answer__label">Вариант ответа 3</label>
+                                            </div>
+                                            <div class="answer">
+                                                <input type="radio" class="answer__radio" name="rb3" id="rb12" value="2">
+                                                <label for="rb12" class="answer__label">Вариант ответа 4</label>
+                                            </div>
+                                        </div>
+                                        <button class="quiz-submit" id="submit">Отправить ответы</button>
+                                   </div> 
+                                   <div class="article__timer">
+                                        <div class="timer">
+                                            <p class="timer__title">Таймер</p>
+                                            <p class="timer__subtitle">Осталось:</p>
+                                            <p class="timer__time">10:00</p>
+                                        </div>
+                                   </div>
+                                </div>
+                                <div class="quiz-result quiz-result_correct hide">
+                                    <img src="images/result1.png" alt="" class="quiz-result__image">
+                                    <div class="quiz-result__info">
+                                        <p class="quiz-result__head">Тест пройден</p>
+                                        <p class="quiz-result__text">Вы ответили верно на <span class="quiz-text quiz-text_correct">12</span> вопросов из <span class="quiz-questions"></span></p>
+                                    </div>
+                                    <button class="quiz-button quiz-button_correct js-btn-next">Перейти к новому разделу</button>
+                                </div>
+                                <div class="quiz-result quiz-result_incorrect hide">
+                                    <img src="images/result2.png" alt="" class="quiz-result__image">
+                                    <div class="quiz-result__info">
+                                        <p class="quiz-result__head">Тест не пройден</p>
+                                        <p class="quiz-result__text">Вы ответили верно на <span class="quiz-text quiz-text_fail">9</span> вопросов из <span class="quiz-questions"></span></p>
+                                    </div>
+                                    <button class="quiz-button quiz-button_incorrect">Пройти тест снова</button>
+                                </div>
+                                <div class="quiz-result quiz-result_fail hide">
+                                    <img src="images/result3.png" alt="" class="quiz-result__image">
+                                    <div class="quiz-result__info">
+                                        <p class="quiz-result__head">Вы не прошли тест 3 раза</p>
+                                        <p class="quiz-result__text">Обратитесь к вашему руководителю.</p>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="18">
