change links in video curses

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                                             <img src="images/video1.jpg" alt="" class="video__image">
                                             <div class="video__info">
                                                 <h3 class="video__title">Mama-edu “Аккаунт менеджер”</h3>
-                                                <a href="" class="link" target="_blank">mama-edu.com</a>
+                                                <a href="https://mama-edu.com/" class="link" target="_blank">mama-edu.com</a>
                                                 <p class="video__text">Логин: <span class="link">d.udinceva@rocketprofit.com</span></p>
                                                 <p class="video__text">Пароль: 090607callR</p>
                                             </div>
@@ -541,7 +541,7 @@
                                             <img src="images/video2.jpg" alt="" class="video__image">
                                             <div class="video__info">
                                                 <h3 class="video__title">Affhub “Арбитраж для новичков”</h3>
-                                                <p class="video__text"><a href="" class="link" target="_blank">affhub.net/aboutstudy</a></p>
+                                                <p class="video__text"><a href="https://affhub.net/aboutstudy/" class="link" target="_blank">affhub.net/aboutstudy</a></p>
                                                 <p class="video__text">Зарегаться самостоятельно</p>
                                             </div>
                                         </div>
@@ -552,7 +552,7 @@
                                             <img src="images/video3.jpg" alt="" class="video__image">
                                             <div class="video__info">
                                                 <h3 class="video__title">Cybermarketing “Курс по СРА”</h3>
-                                                <p class="video__text"><a href="" class="link" target="_blank">cybermarketing.ru/video-courses/prom...</a></p>
+                                                <p class="video__text"><a href="https://www.cybermarketing.ru/video-courses/promo/arbitrazh-trafika-cpa.html" class="link" target="_blank">cybermarketing.ru/video-courses/prom...</a></p>
                                                 <p class="video__text">Зарегаться самостоятельно</p>
                                             </div>
                                         </div>
@@ -563,7 +563,7 @@
                                             <img src="images/video4.jpg" alt="" class="video__image">
                                             <div class="video__info">
                                                 <h3 class="video__title">Lucky-center “Арбитраж трафика”</h3>
-                                                <p class="video__text"><a href="" class="link" target="_blank">luckycenter.ekvio.ru/395/lp/1575-kurcy...</a></p>
+                                                <p class="video__text"><a href="https://luckycenter.ekvio.ru/395/lp/1575-kursy/9313-bazovyy-kurs-po-arbitrazhu-trafika" class="link" target="_blank">luckycenter.ekvio.ru/395/lp/1575-kurcy...</a></p>
                                                 <p class="video__text">Логин: <span class="link">2yyegorguu7@list.ru</span></p>
                                                 <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
                                             </div>
@@ -574,8 +574,8 @@
                                         <div class="video__inner">
                                             <img src="images/video4.jpg" alt="" class="video__image">
                                             <div class="video__info">
-                                                <h3 class="video__title">Lucky-center “Арбитраж трафика”</h3>
-                                                <p class="video__text"><a href="" class="link" target="_blank">luckycenter.ekvio.ru/395/lp/1575-kurcy...</a></p>
+                                                <h3 class="video__title">Lucky-center “Тех.основы в арбитраже”</h3>
+                                                <p class="video__text"><a href="https://luckycenter.ekvio.ru/395/lp/1575-kursy/8393-kurs-po-tekhnicheskim-osnovam-v-arbitrazhe" class="link" target="_blank">luckycenter.ekvio.ru/395/lp/1575-kurcy...</a></p>
                                                 <p class="video__text">Логин: <span class="link">2yyegorguu7@list.ru</span></p>
                                                 <p class="video__text">Пароль: qypfoj-sYtpyn-7kajha</p>
                                             </div> 
@@ -587,7 +587,7 @@
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="19">
                             <div class="article">
-                                <h2 class="article__title">Задачи</h2>
+                                <h2 class="article__title article__title_no-border">Задачи</h2>
                             </div>
                         </li>
                         <li class="private-cabinet tab-content__item js-tab-content" data-tab="20">
