--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </svg>
                         Видео-курсы
                     </li>
-                    <li class="tab-header__item js-tab-trigger" data-tab="19">
+                    <li class="tab-header__item js-tab-trigger js-tab-trigger_tasks" data-tab="19">
                         <svg class="tab-header__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M8 12.2H15" stroke="#10E5FC" stroke-width="1.5" stroke-miterlimit="10"
                                 stroke-linecap="round" stroke-linejoin="round" />
@@ -485,7 +485,7 @@
                                                 <label for="rb12" class="answer__label">Вариант ответа 4</label>
                                             </div>
                                         </div>
-                                        <button class="quiz-submit" id="submit">Отправить ответы</button>
+                                        <button class="quiz-submit button-blue" id="submit">Отправить ответы</button>
                                    </div> 
                                    <div class="article__timer">
                                         <div class="timer">
@@ -588,6 +588,123 @@
                         <li class="tab-content__item js-tab-content" data-tab="19">
                             <div class="article">
                                 <h2 class="article__title article__title_no-border">Задачи</h2>
+                                <div class="tasks">
+                                    <div class="tasks__headers">
+                                        <div class="task-header" data-task="1">
+                                            <img src="images/task1.png" alt="" class="task-header__image">
+                                            <div class="task-header__info task-header__info_one">
+                                                <p class="task-header__title">Регистрация и изучение ЛК RocketProfit</p>
+                                                <button class="task-header__button">Перейти к задаче</button>
+                                            </div>
+                                        </div>
+                                        <div class="task-header" data-task="2">
+                                            <img src="images/task2.png" alt="" class="task-header__image">
+                                            <div class="task-header__info task-header__info_two">
+                                                <p class="task-header__title">Регистрация в пп конкурентов</p>
+                                                <button class="task-header__button">Перейти к задаче</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="tasks__content">
+                                        <div class="task-content" data-task="1">
+                                            <div class="task-head">
+                                                <img src="images/task1.png" alt="" class="task-head__image">
+                                                <p class="task-head__text">Регистрация и изучение ЛК RocketProfit</p>
+                                            </div>
+                                            <ul class="task-list">
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">1</div>
+                                                    <p class="task-list__text">Зарегай себе отдельный акк, как вебмастер: пройди авторизацию через почту и телеграм</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">2</div>
+                                                    <p class="task-list__text">Создай поток с лендингом и транзиткой на оффер (любой)</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">3</div>
+                                                    <p class="task-list__text">Добавь следующие метки - sid1=test, sid2=pispis, sid3=rp</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">4</div>
+                                                    <p class="task-list__text">Оставь тестовую заявку и покажи ее скрином в статистике</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">5</div>
+                                                    <p class="task-list__text">Создай в этом потоке сплит-тест, покажи это скрином</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">6</div>
+                                                    <p class="task-list__text">Скажи, какие регионы ты бы исключил(а) из таргета конкретно по той стране, на которую ты теоретически бы лил(а) - например, Испания</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">7</div>
+                                                    <p class="task-list__text">Какие офферы у нас запущены по Индонезии?</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">8</div>
+                                                    <p class="task-list__text">Дай потоковую и прямую ссылку на любой лендинг в системе</p>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <div class="task-list__number">9</div>
+                                                    <p class="task-list__text">Скинь архив с АПИ по офферу «Степлекс» Венгрия (любой ленд топовый)</p>
+                                                </li>
+                                            </ul>
+                                            <button class="button-blue">Отправить скрин</button>
+                                        </div>
+                                        <div class="task-content" data-task="2">
+                                            <div class="task-head">
+                                                <img src="images/task2.png" alt="" class="task-head__image">
+                                                <p class="task-head__text">Регистрация в пп конкурентов</p>
+                                            </div>
+                                            <p class="task-content__subtitle">Зарегистрироваться в пп у конкурентов, как веб-мастер и сохранить все логины, пароли в отдельном файле excel</p>
+                                            <ul class="task-list">
+                                                <li class="task-list__item">
+                                                    <a href="https://lucky.online/" class="task-list__link">LuckyOnline</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://leadbit.com/" class="task-list__link"> Leadbit</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://terraleads.com/" class="task-list__link"> TerraLeads</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://everad.com/" class="task-list__link"> Everad</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://dr.cash/" class="task-list__link">Dr.Cash</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://kma.biz/" class="task-list__link">Kma.biz</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://leadrock.com/" class="task-list__link"> Leadrock</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://leadreaktor.com/" class="task-list__link"> Leadreactor</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://adcombo.com/" class="task-list__link">Adcombo</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://webvork.com/en/" class="task-list__link"> Webvork</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://affstar.com/" class="task-list__link"> Affstar</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://cpaomni.com/" class="task-list__link"> Omnicpa</a>
+                                                </li>
+                                                <li class="task-list__item">
+                                                    <a href="https://cpa.tl/" class="task-list__link">Cpa.tl</a>
+                                                </li>
+                                            </ul>
+                                            <form class="task-content__form">
+                                                <input type="text" class="task-content__input" placeholder="Вставь ссылку на файл">
+                                                <button class="button-blue button-blue_form">Отправить</button>
+                                            </form>                                            
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                         <li class="private-cabinet tab-content__item js-tab-content" data-tab="20">
