change visual of menu

--- a/index.html
+++ b/index.html
@@ -423,8 +423,12 @@
                         </li>
                         <li class="tab-content__item js-tab-content" data-tab="17">
                             <div class="article">
-                                <h2 class="article__title">Заголовок темы</h2>
-                                <button class="quiz-button quiz-button_start">Начать прохождение теста</button>
+                                <h2 class="article__title">Тест по теме</h2>
+                                <div class="quiz-preview">
+                                    <h3 class="quiz-preview__title">Ответьте правильно на 15 вопросов за 30 минут</h3>
+                                    <p class="quiz-preview__text">Данный тест составлен по материалу из блока <span class="quiz-preview__span">«Rocket Profit»</span>. Если вы изучили весь раздел, то можете приступать к тесту. Если вы допустите 3 и более ошибок, то тест будет считаться не пройденным.</p>
+                                    <button class="button-blue quiz-preview__button">Начать прохождение теста</button>
+                                </div>                                
                                 <div class="article__wrap">
                                    <div class="article__quiz">
                                         <h3 class="article__subtitle article__subtitle_quiz">Название теста</h3>
@@ -491,7 +495,7 @@
                                         <div class="timer">
                                             <p class="timer__title">Таймер</p>
                                             <p class="timer__subtitle">Осталось:</p>
-                                            <p class="timer__time">10:00</p>
+                                            <p class="timer__time">30:00</p>
                                         </div>
                                    </div>
                                 </div>
