--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                         Rocket Profit
                     </li>
                     <ul class="submenu submenu_main">
-                        <li class="submenu__item js-tab-trigger" data-tab="2">Важные определения</li>
+                        <li class="submenu__item js-tab-trigger showed" data-tab="2">Важные определения</li>
                         <li class="submenu__item">
-                            <div class="submenu__head submenu__head_icon accordion-parent-js">Офферы</div>
+                            <div class="submenu__head submenu__head_icon">Офферы</div>
                             <ul class="submenu">
                                 <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="3">Форм факторы</li>
                                 <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="4">Ниши и возрастные ограничения</li>
@@ -106,7 +106,7 @@
                         <li class="submenu__item js-tab-trigger" data-tab="8">Платёжные сервисы</li>
                         <li class="submenu__item js-tab-trigger" data-tab="9">Основы постбека</li>
                         <li class="submenu__item">
-                            <div class="submenu__head submenu__head_icon accordion-parent-js">Наши источники траффика</div>
+                            <div class="submenu__head submenu__head_icon">Наши источники траффика</div>
                             <ul class="submenu">
                                 <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="10">Наши источники траффика</li>
                                 <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="11">Наши источники траффика</li>
@@ -764,7 +764,7 @@
         <div class="popup__inner popup__inner_access">
             <img src="images/lock.png" class="popup__image" alt="">       
             <p class="popup__title">Вы ещё не прошли предыдущие темы, чтобы иметь доступ к этой теме</p>
-            <div class="popup__close">Вернуться</div>
+            <div class="popup__close popup__close_access">Вернуться</div>
         </div>
     </div>
 
@@ -787,7 +787,6 @@
             <div class="popup__close popup__close_shot">Вернуться</div>             
         </div>        
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
