--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <input type="search" class="search__field hide" placeholder="Введите запрос для поиска">
                             <img src="images/svg/search.svg" class="search__icon" alt="">
                         </div>
-                        <div class="user js-tab-trigger" data-tab="20">
+                        <div class="user js-tab-trigger showed" data-tab="20">
                             <img src="images/svg/user.svg" alt="" class="user__image">
                             <div class="user__inner">
                                 <p class="user__name">Игорь Николаевич</p>
