--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
                                     <h2 class="article__title">Тест по теме</h2>
                                     <div class="quiz-preview">
                                         <h3 class="quiz-preview__title">Ответьте правильно на 15 вопросов за 30 минут</h3>
-                                        <p class="quiz-preview__text">Данный тест составлен по материалу из блока <span class="quiz-preview__span">«Rocket Profit»</span>. Если вы изучили весь раздел, то можете приступать к тесту. Если вы допустите 3 и более ошибок, то тест будет считаться не пройденным.</p>
+                                        <p class="quiz-preview__text">Данный тест составлен по материалу из блока <span class="quiz-preview__span">«RocketProfit»</span>. Если вы изучили весь раздел, то можете приступать к тесту.</p>
+                                        <p class="quiz-preview__text">Если вы допустите 3 и более ошибок, то тест будет считаться не пройденным.</p>
                                         <button class="button-blue quiz-preview__button">Начать прохождение теста</button>
                                     </div>                                
                                     <div class="article__wrap">
