change menu script

--- a/index.html
+++ b/index.html
@@ -92,32 +92,32 @@
                         Rocket Profit
                     </li>
                     <ul class="submenu submenu_main">
-                        <li class="submenu__item js-tab-trigger showed" data-tab="2">Важные определения</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger showed" data-tab="2">Важные определения</li>
                         <li class="submenu__item">
                             <div class="submenu__head submenu__head_icon">Офферы</div>
                             <ul class="submenu">
                                 <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="3">Форм факторы</li>
-                                <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="4">Ниши и возрастные ограничения</li>
+                                <li class="submenu__item submenu__item_sub submenu__item_last js-tab-trigger" data-tab="4">Ниши и возрастные ограничения</li>
                             </ul>
                         </li>
-                        <li class="submenu__item js-tab-trigger" data-tab="5">Страны</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="6">Коммуникация с вебами</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="7">Способы вывода</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="8">Платёжные сервисы</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="9">Основы постбека</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="5">Страны</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="6">Коммуникация с вебами</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="7">Способы вывода</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="8">Платёжные сервисы</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="9">Основы постбека</li>
                         <li class="submenu__item">
                             <div class="submenu__head submenu__head_icon">Наши источники траффика</div>
                             <ul class="submenu">
                                 <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="10">Наши источники траффика</li>
-                                <li class="submenu__item submenu__item_sub js-tab-trigger" data-tab="11">Наши источники траффика</li>
+                                <li class="submenu__item submenu__item_sub submenu__item_last js-tab-trigger" data-tab="11">Наши источники траффика</li>
                             </ul>
                         </li>
-                        <li class="submenu__item js-tab-trigger" data-tab="12">SPY сервисы FB</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="13">Таблица, отчёты</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="14">Алерты</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="15">Преимущества нашей ПП</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="16">Полезные сайты</li>
-                        <li class="submenu__item js-tab-trigger" data-tab="17">Тест</li>                        
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="12">SPY сервисы FB</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="13">Таблица, отчёты</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="14">Алерты</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="15">Преимущества нашей ПП</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="16">Полезные сайты</li>
+                        <li class="submenu__item submenu__item-js js-tab-trigger" data-tab="17">Тест</li>                        
                     </ul>
                     <li class="tab-header__item js-tab-trigger js-next showed" data-tab="18">
                         <svg class="tab-header__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
